--- a/collated/A0133949U.md
+++ b/collated/A0133949U.md
@@ -3,15 +3,13 @@
 ``` java
 package logic.command;
 
-import java.util.ArrayList;
-
 import logic.Command;
 import logic.CommandType;
 import logic.Manager;
 import logic.Task;
 import parser.CommandPackage;
 
-public class AddCommand extends Command{
+public class AddCommand extends Command {
 	CommandType ct;
 	Manager mgr;
 	CommandPackage commandInfo;
@@ -25,9 +23,10 @@ public class AddCommand extends Command{
 	}
 
 	@Override
-	public String execute() {
+	public String execute() throws InvalidCommandException{
 		
 		Task task = new Task(commandInfo.getPhrase());
+		
 		if (commandInfo.startingTime() != null) {
 			task.setStartTime(commandInfo.startingTime());
 		}
@@ -35,16 +34,23 @@ public class AddCommand extends Command{
 			task.setEndTime(commandInfo.endingTime());
 		}
 
-		if (commandInfo.getPriority() != null) {
+		if (commandInfo.getPriority() != null && commandInfo.getPriority() != "") {
 			String pri = commandInfo.getPriority().trim();
-			if (pri != null && pri != "") {
-				task.setPriority(pri);
+			
+			int priority = Integer.parseInt(pri);		
+			if(priority>3 || priority<=0){
+				throw new InvalidCommandException
+				("Invalid priority.Priority is valid from 1 to 3");
 			}
+			
+			task.setPriority(priority);
+			
 		}
-
+		//System.out.println("here");
+		
 		mgr.addToTaskList(task);
 
-		return "added";
+		return "Task Added: "+task.getName();
 	}
 
 }
@@ -76,7 +82,7 @@ public class ClearCommand extends Command{
 
 		mgr.clear();
 
-		return "all tasks cleared";
+		return "All tasks cleared";
 	}
 
 }
@@ -97,46 +103,114 @@ public class DeleteCommand extends Command{
 	CommandType ct;
 	Manager mgr;
 	String deleteInfo;
+	boolean inSearchStatus=false;
 
-	public DeleteCommand(CommandType ct,Manager manager,String deleteInfo) {
+	public DeleteCommand(CommandType ct,Manager manager,
+			String deleteInfo, boolean inSearchStatus) {
 		super(ct);
 		this.ct= ct;
 		this.mgr=manager;	
 		this.deleteInfo = deleteInfo;
+		this.inSearchStatus=inSearchStatus;
+		
 		
 	}
 
 	@Override
-	public String execute() {
-		int index=0;
-		boolean found = false;
-		ArrayList<Task> taskList = mgr.getTaskList();
-		Task t;
-		if (isInteger(deleteInfo, 10)) { // delete by index
-			index = Integer.parseInt(deleteInfo)-1;
-			if(index<taskList.size()  && index>=0){
-				found =true;
-				mgr.delete(index);		
-				return "task deleted";
+	public String execute() throws InvalidCommandException{
+		
+		if(inSearchStatus==false){
+			int index=0;
+			int searchIndex=-1;
+			boolean found = false;
+			ArrayList<Task> taskList = mgr.getTaskList();
+			Task t;
+			if (isInteger(deleteInfo, 10)) { // delete by index
+				index = Integer.parseInt(deleteInfo)-1;
+				if(index<taskList.size()  && index>=0){
+					found =true;
+					t= mgr.delete(index,searchIndex,false);		
+					return "Task deleted: "+t.getName();
+				}
+				
+			}  
+			// delete by name
+			for (int i = 0; i < taskList.size(); i++) {
+				t = taskList.get(i);
+				if (t.getName().equals(deleteInfo)) {
+					index=i;
+					found = true;
+					break;
+				}
 			}
 			
-		}  
-		// delete by name
-		for (int i = 0; i < taskList.size(); i++) {
-			t = taskList.get(i);
-			if (t.getName().equals(deleteInfo)) {
-				index=i;
-				found = true;
-				break;
+			if(found == false){
+				throw new InvalidCommandException("Task not found");
 			}
+			
+			t= mgr.delete(index,searchIndex,false);		
+			return "Task deleted: "+t.getName();
+			
+		}else{ //in search status
+			
+			int searchIndex=-1;
+			int taskIndex=-1;
+			boolean found = false;
+			ArrayList<Task> searchList = mgr.getSearchList();
+			ArrayList<Task> taskList = mgr.getTaskList();
+			
+			Task t;
+			if (isInteger(deleteInfo, 10)) { // delete by index
+				searchIndex = Integer.parseInt(deleteInfo)-1;
+				
+				
+				if(searchIndex<searchList.size()  && searchIndex>=0){
+					found =true;
+					t= searchList.get(searchIndex);				
+					Task temp;
+					
+					for (int i = 0; i < taskList.size(); i++) {
+						temp = taskList.get(i);
+						if (temp.equals(t)) {
+							taskIndex=i;
+							break;
+						}
+					}
+					t= mgr.delete(taskIndex,searchIndex,true);		
+					return "Task deleted: "+t.getName();
+				}
+				
+			}  
+			// delete by name
+			for (int i = 0; i < searchList.size(); i++) {
+				t = searchList.get(i);
+				
+				if (t.getName().equals(deleteInfo)) {
+					searchIndex=i;
+					Task temp;
+					
+					for (int j = 0; j < taskList.size(); j++) {
+						temp = taskList.get(i);
+						if (temp.equals(t)) {
+							taskIndex=i;
+							break;
+						}
+					}
+					found = true;
+					t= mgr.delete(taskIndex,searchIndex,true);		
+					return "Task deleted: "+t.getName();
+				}
+			}
+			
+			//task not found
+			if(found == false){
+				throw new InvalidCommandException("Task not found in searched list. To return to full list,press Enter");
+			}
+			return "Task not found";
+			
 		}
 		
-		if(found == false){
-			return "invalid command";
-		}
 		
-		mgr.delete(index);		
-		return "task deleted";
 	}
 	
 	private boolean isInteger(String s, int radix) {
@@ -155,6 +229,21 @@ public class DeleteCommand extends Command{
 		return true;
 	}
 
+}
+```
+###### src\logic\command\InvalidCommandException.java
+``` java
+package logic.command;
+
+public class InvalidCommandException extends Exception{
+    
+	public InvalidCommandException(){
+		super();
+	}
+	
+	public InvalidCommandException(String msg){
+		super(msg);
+	}
 }
 ```
 ###### src\logic\command\MarkCommand.java
@@ -183,25 +272,42 @@ public class MarkCommand extends Command{
 	}
 
 	@Override
-	public String execute() {
+	/**
+	 * execute mark command and return a string of message
+	 * @return     return message
+	 * @throws InvalidCommandException  If command is invalid.
+	 */
+	public String execute() throws InvalidCommandException{
 		int index=0;
 		ArrayList<Task> taskList = mgr.getTaskList();
 		Task t;
-		if (isInteger(markInfo, 10)) { // mark by index
+		boolean found =false;
+		
+		if (isInteger(markInfo, 10)) { // delete by index
 			index = Integer.parseInt(markInfo)-1;
+			if(index<taskList.size()  && index>=0){
+				found =true;
+				t= mgr.mark(index);		
+				return "Task done: "+t.getName();
+			}
 			
-		} else {// mark by name
-			for (int i = 0; i < taskList.size(); i++) {
-				t = taskList.get(i);
-				if (t.getName().equals(markInfo)) {
-					index=i;
-					break;
-				}
+		}  
+		// delete by name
+		for (int i = 0; i < taskList.size(); i++) {
+			t = taskList.get(i);
+			if (t.getName().equals(markInfo)) {
+				index=i;
+				found = true;
+				break;
 			}
 		}
-		mgr.mark(index);
 		
-		return "task done";
+		if(found == false){
+			throw new InvalidCommandException("Task not found");
+		}
+		
+		t= mgr.mark(index);
+		return "Task done: " + t.getName();
 	}
 	
 	private boolean isInteger(String s, int radix) {
@@ -243,9 +349,12 @@ public class RedoCommand extends Command{
 	}
 
 	@Override
-	public String execute() {
-		mgr.redo();
-		return "redo previous operation";
+	public String execute() throws InvalidCommandException{
+		if(mgr.redo()){
+		    return "Redo previous operation";
+		}else{
+			throw new InvalidCommandException("No operation to redo");
+		}
 	}
 
 }
@@ -277,8 +386,7 @@ public class SearchCommand extends Command{
 	}
 
 	@Override
-	public String execute() {
-
+	public String execute() throws InvalidCommandException{
 		
 		Task task = new Task(commandInfo.getPhrase());
 		if (commandInfo.startingTime() != null) {
@@ -292,12 +400,18 @@ public class SearchCommand extends Command{
 		String pri = commandInfo.getPriority().trim();
 
 		if (pri != null && pri != "") {
-			task.setPriority(pri);
+			int priority = Integer.parseInt(pri);
+			
+			if(priority>3 || priority<=0){
+				throw new InvalidCommandException
+				("Invalid priority.Priority is valid from 1 to 3");
+			}
+			task.setPriority(priority);
 		}
 
         mgr.search(task);
 		
-		return "search completed";
+		return "Search completed. To go back, press Enter";
 	}
 
 }
@@ -328,11 +442,11 @@ public class SetCommand extends Command{
 	}
 
 	@Override
-	public String execute() {
+	public String execute() throws InvalidCommandException{
 		if(mgr.setPath(pathInfo)){
-			return "path set to"+ pathInfo;
+			return "Path set to"+ pathInfo;
 		}else{
-			return "invalid path";
+			throw new InvalidCommandException("Invalid path");
 			
 		}
 	}
@@ -367,22 +481,22 @@ public class SortCommand extends Command{
 	}
 
 	@Override
-	public String execute() {
+	public String execute() throws InvalidCommandException{
 		
 		if (commandInfo.getPhrase().equals("name")) {
 			mgr.sort("name");
-			return "sorted by name";
+			return "Sorted by name";
 			
 		} else if (commandInfo.getPhrase().equals("time")) {
 			mgr.sort("time");
-			return "sorted by time";
+			return "Sorted by time";
 			
 		} else if (commandInfo.getPhrase().equals("priority")) {
 			mgr.sort("priority");
-			return "sorted by priority";
+			return "Sorted by priority";
 
 		} else {
-			return "invalid sorting type";
+			throw new  InvalidCommandException("Invalid sorting type");
 		}
 	}
 
@@ -405,13 +519,15 @@ public class UndoCommand extends Command{
 		super(ct);
 		this.ct= ct;
 		this.mgr=manager;	
-		
 	}
 
 	@Override
-	public String execute() {
-		mgr.undo();
-		return "undo previous operation";
+	public String execute() throws InvalidCommandException{
+		if(mgr.undo()){
+		    return "Undo previous operation";
+		}else{
+			throw new InvalidCommandException("No operation to undo");
+		}
 	}
 
 }
@@ -433,6 +549,7 @@ public class UpdateCommand extends Command{
 	CommandType ct;
 	Manager mgr;
 	CommandPackage commandInfo;
+	boolean inSearchStatus;
 
 	public UpdateCommand(CommandType ct,Manager manager,CommandPackage cp) {
 		super(ct);
@@ -443,50 +560,136 @@ public class UpdateCommand extends Command{
 	}
 
 	@Override
-	public String execute() {
+	public String execute() throws InvalidCommandException{
 		
 		ArrayList<String> update = commandInfo.getUpdateSequence();
 		String target = update.get(1);
 		Task task;
 		Task newTask;
+		boolean found=false;
+		String msg="";
 		ArrayList<Task> taskList = mgr.getTaskList();
 
 		for (int i = 0; i < taskList.size(); i++) {
 			task = taskList.get(i);
-			if (task.getName().equals(target)) {
 
+			if (task.getName().equals(target)) { // found the task to be updated
+                found=true;
+                newTask= copyOf(task);
+                
 				if (update.get(2).equalsIgnoreCase("name")) {
-					if (update.get(3) != null) {
-						task.setTaskName(update.get(3));
+					if (update.get(3) == null) {
+						throw new InvalidCommandException("What's the new name?");
 					}
+					
+					assert update.get(3)!=null;
+					newTask.setTaskName(update.get(3));
+					
+					msg = "Task \""+target+"\" updated to \""+task.getName()+"\"";
 
 				} else if (update.get(2).equals("#") || 
-						update.get(2).equalsIgnoreCase("priority")) {
-					task.setPriority(update.get(3));
+					update.get(2).equalsIgnoreCase("priority")) {
+					System.out.println("update p: "+update.get(3));
+					if (update.get(3) == null) {
+						throw new InvalidCommandException("What's the new priority?");
+					}
+					
+					if (update.get(3).equals("remove") || update.get(3).equals("delete")) {
+						newTask.setPriority(null);
+						msg = "priority removed";
+						
+					}else if(!isInteger(update.get(3),10)){
+						throw new InvalidCommandException("Priority should be an integer");
+						
+					}else if(isInteger(update.get(3),10)){
+						int priority = Integer.parseInt(update.get(3));	
+						
+						if(priority>3 || priority<=0){		
+							throw new InvalidCommandException
+							("Invalid priority.Priority is valid from 1 to 3");
+						}
+						
+						newTask.setPriority(priority);
+						msg = "Task \""+target+"\" priority updated to \""+priority+"\"";
+					}
+
 				} else if (update.get(2).equalsIgnoreCase("startTime")) {
-					// System.out.println("parse date" +
-					// DateParser.setDate(update.get(3)));
-					task.setStartTime(commandInfo.startingTime());
+					
+					if (update.get(3) == null) {
+						throw new InvalidCommandException("What's the new start time?");
+					}
+					if (update.get(3) == "remove" || update.get(3)=="delete") {
+						newTask.setStartTime(null);;
+						msg = "priority removed";
+					}else{
+						newTask.setStartTime(commandInfo.startingTime());
+						msg = "Task \""+target+"\" start time updated";
+					}
+					
+					
 				} else if (update.get(2).equalsIgnoreCase("endTime")) {
-					task.setEndTime(commandInfo.endingTime());
+					if (update.get(3) == null) {
+						throw new InvalidCommandException("What's the new end time?");
+					}
+					if (update.get(3) == "remove" || update.get(3)=="delete") {
+						newTask.setEndTime(null);
+						msg = "priority removed";
+					}else{
+						newTask.setEndTime(commandInfo.endingTime());
+						msg = "Task \""+target+"\" end time updated";
+					}
+					
+					
+				} else{
+					throw new InvalidCommandException("Invalid update type. You can"
+							+ "update name/priority/startTime/endTime");
 				}
 
-				newTask = new Task(task.getName());
-				newTask.setStartTime(task.getStartTime());
-				newTask.setEndTime(task.getEndTime());
-				if (task.getPriority() != null) {
-					newTask.setPriority(task.getPriority().toString());
-				}
-
-				taskList.remove(i);
-				taskList.add(i, newTask);
-				mgr.setTaskList(taskList);
-				break;
+				System.out.print(newTask.toString());
+				mgr.update(i, newTask);
+				
+				return msg;
+				
 			}
 
 		}
 		
-		return "task updated";
+		return "Task not Found";
+		
+	}
+	
+	private boolean isInteger(String s, int radix) {
+		if (s.isEmpty())
+			return false;
+		for (int i = 0; i < s.length(); i++) {
+			if (i == 0 && s.charAt(i) == '-') {
+				if (s.length() == 1)
+					return false;
+				else
+					continue;
+			}
+			if (Character.digit(s.charAt(i), radix) < 0)
+				return false;
+		}
+		return true;
+	}
+	
+	private Task copyOf(Task target){
+		Task newTask = new Task(target.getName());
+		
+		if (target.getStartTime() != null) {
+			newTask.setStartTime(target.getStartTime());;
+		}
+		
+		if (target.getEndTime() != null) {
+			newTask.setEndTime(target.getEndTime());;
+		}
+		
+		if (target.getPriority() != null) {
+			newTask.setPriority(target.getPriority());
+		}
+		
+		return newTask;
 	}
 
 }
@@ -495,6 +698,8 @@ public class UpdateCommand extends Command{
 ``` java
 package logic;
 
+import logic.command.InvalidCommandException;
+
 public abstract class Command {
 	private CommandType ct;
 	
@@ -502,7 +707,7 @@ public abstract class Command {
 		this.ct = ct;
 	}
 	
-	public abstract String execute();
+	public abstract String execute() throws InvalidCommandException;
 	
 }
 ```
@@ -510,12 +715,9 @@ public abstract class Command {
 ``` java
 package logic;
 
-public enum CommandType {
+public enum CommandType{
 	    CREATE, DISPLAY, DELETE, CLEAR, EXIT, INVALID, SORT, SEARCH, UPDATE, REDO, 
 		UNDO, SORTBYSTARTTIME, SORTBYDEADLINE, MARK, SET;
-		
-	
-	
 }
 ```
 ###### src\logic\LogicClass.java
@@ -525,9 +727,11 @@ import java.util.ArrayList;
 import logic.command.AddCommand;
 import logic.command.ClearCommand;
 import logic.command.DeleteCommand;
+import logic.command.InvalidCommandException;
 import logic.command.MarkCommand;
 import logic.command.RedoCommand;
 import logic.command.SearchCommand;
+import logic.command.SetCommand;
 import logic.command.SortCommand;
 import logic.command.UndoCommand;
 import logic.command.UpdateCommand;
@@ -549,9 +753,8 @@ public class LogicClass implements LogicInterface{
 
 	// constructor
 	private LogicClass() {
-		mgr.setTaskList(storage.read().get(0));	
-		mgr.setArchivedList(storage.read().get(1));
-
+		mgr.initialize(storage.read().get(0), 
+				storage.read().get(1));//taskList and archivedList respectively
 	}
 
 	public static LogicClass getInstance() {
@@ -563,20 +766,19 @@ public class LogicClass implements LogicInterface{
 	}
 
 	public ArrayList<Task> getTaskList(){
-
-		if(isSearchOp==true)
+		
+		if(isSearchOp==true){
 			return mgr.getSearchList();
-		
+		}	
 		return mgr.getTaskList();
 	}
 	
-	public ArrayList<Task> getTaskListForSearcher(){
-		
+	public ArrayList<Task> getTaskListForSearcher(){	
 		return mgr.getTaskList();
 	}
 	
-	public String executeCommand(CommandPackage commandPackage) {
-		isSearchOp = false;
+	public String executeCommand(CommandPackage commandPackage) throws InvalidCommandException {
+		
 //		if(commandPackage==null){
 //			System.out.println("cp is null");
 //		}
@@ -586,13 +788,21 @@ public class LogicClass implements LogicInterface{
 
 		switch (commandType) {
 		case CREATE:
-			cmd = new AddCommand(commandType,mgr,commandPackage);
+			isSearchOp=false;
+			cmd = new AddCommand(commandType,mgr,commandPackage);	
 			break;
 		case UPDATE:
-			cmd = new UpdateCommand(commandType,mgr,commandPackage);
+			
+			    cmd = new UpdateCommand(commandType,mgr,commandPackage);
+			
 			break;
 		case DELETE:
-			cmd = new DeleteCommand(commandType,mgr,commandPackage.getPhrase());
+			if(isSearchOp==false){
+				cmd = new DeleteCommand(commandType,mgr,commandPackage.getPhrase(),false);
+			}else{
+				cmd = new DeleteCommand(commandType,mgr,commandPackage.getPhrase(),true);
+			}
+			
 			break;
 		case CLEAR:
 			cmd = new ClearCommand(commandType,mgr);
@@ -614,7 +824,7 @@ public class LogicClass implements LogicInterface{
 			cmd = new MarkCommand(commandType,mgr,commandPackage.getPhrase());
 			break;
 		case SET:
-			setPath(commandPackage.getPhrase());
+			cmd = new SetCommand(commandType,mgr,commandPackage.getPhrase());
 			break;
 		case EXIT:
 			System.exit(0);
@@ -623,26 +833,27 @@ public class LogicClass implements LogicInterface{
 
 		}
 		
-		String returnMsg = cmd.execute();
+		String returnMsg= cmd.execute();
+		
 		return returnMsg;
 		
 	}
 
-	//@author A0133949U
 	private String invalid() {
-		return "The command is invalid, please key in the valid command.";
+		return "The command is invalid, type in help to see help sheet.";
 	}
 
-	//@author A0133949U
 	public boolean setPath(String path) {
 		return storage.setPath(path);
 	}
 
 
-	//@author A0133949U
-
 	public boolean setPathFirstTime(){
 		return storage.setPath(this.path);
+	}
+	
+	public void setIsSearchOp(boolean tof){
+		isSearchOp=tof;
 	}
 
 	//@author A0133949U
@@ -717,12 +928,12 @@ public class Manager {
     public Manager(){
     	taskList = new ArrayList<Task>();
     	timeline = TimeLine.getInstance();
-    	ptl = ptl.getInstance();
+    	ptl = PriorityTaskList.getInstance();
     	seacher = Searcher.getInstance();
     	searchTaskList = new ArrayList<Task>();
     	archivedList = new ArrayList<Task>();
     	storage = Storage.getInstance();
-    	undoRedo = new UndoRedoOp(taskList);
+    	undoRedo = UndoRedoOp.getInstance();
     }
     
     public static Manager getInstance(){
@@ -731,6 +942,17 @@ public class Manager {
 		}
 		return manager;
 	}
+  
+    
+    public void initialize( ArrayList<Task> tl,  ArrayList<Task> al){
+    	taskList = tl;
+        setptlAndTimeLine(taskList);
+        archivedList = al;
+    	undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
+    			new ArrayList<Task>(archivedList));
+    	storage.write(taskList,archivedList);
+    	
+    }
     
     //accessor
     
@@ -750,9 +972,11 @@ public class Manager {
     }
     
     //functions
-    public Task addToTaskList(Task task) {   	
-		taskList.add(task);
-		undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
+    public Task addToTaskList(Task task) {   
+    	
+		taskList.add(0,task);
+		undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
+				new ArrayList<Task>(archivedList));
 		ptl.addToPL(task);
 		timeline.addToTL(task);
 		storage.write(taskList,archivedList);
@@ -761,9 +985,13 @@ public class Manager {
 
 	}
     
-    public Task delete(int index) { 
-    	Task t = taskList.remove(index);    	
-		undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
+    public Task delete(int taskIndex,int searchIndex,boolean inSearchStatus) { 
+    	if(inSearchStatus){
+    		searchTaskList.remove(searchIndex);
+    	}
+    	Task t = taskList.remove(taskIndex);    	
+    	undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
+    			new ArrayList<Task>(archivedList));
 		ptl.deleteFromPL(t);;
 		timeline.deleteFromTL(t);
 		storage.write(taskList,archivedList);
@@ -775,7 +1003,8 @@ public class Manager {
     	taskList.clear();
 		ptl.clear();
 		timeline.clear();
-		undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
+		undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
+    			new ArrayList<Task>(archivedList));
 		storage.write(taskList,archivedList);
 
     }
@@ -803,7 +1032,8 @@ public class Manager {
 			taskList.addAll(ptl.getP4());
 			break;
     	}
-		undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
+    	undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
+    			new ArrayList<Task>(archivedList));
 		storage.write(taskList,archivedList);
 
 	}
@@ -819,8 +1049,16 @@ public class Manager {
   	
     }
     
-    public void redo(){
-    	taskList = undoRedo.redo();
+    public boolean redo(){
+    	if(undoRedo.redo() == null){
+    		return false;
+    	}
+    	assert undoRedo.redo()!=null;
+    	
+    	ArrayList<ArrayList<Task>> lists = undoRedo.redo();
+    	taskList = lists.get(0);
+    	archivedList = lists.get(1);
+    	
 		ptl.clear();
 		timeline.clear();
 		for (int i = 0; i < taskList.size(); i++) {
@@ -828,16 +1066,26 @@ public class Manager {
 			ptl.addToPL(task);
 			timeline.addToTL(task);
 		}
+		
 		storage.write(taskList,archivedList);
-  	
+  	    return true;
     }
     
-    public void undo(){
-    	taskList = new ArrayList<Task>(undoRedo.undo());
+    public boolean undo(){
+    	if(undoRedo.undo()==null){
+    		return false;
+    	}
+    	assert undoRedo.undo()!=null;
+    	
+    	ArrayList<ArrayList<Task>> lists = undoRedo.redo();
+    	taskList = new ArrayList<Task>(lists.get(0));
+    	archivedList = new ArrayList<Task>(lists.get(1));
+    	
 		ptl.clear();
 		timeline.clear();
 		setptlAndTimeLine(taskList);
 		storage.write(taskList,archivedList);
+		return true;
     }
     
     public boolean setPath(String pathInfo){
@@ -852,7 +1100,8 @@ public class Manager {
     	Task t = taskList.remove(index); 
     	archivedList.add(t);
     	System.out.println("al"+archivedList.toString());
-		undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
+    	undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
+    			new ArrayList<Task>(archivedList));
 		ptl.deleteFromPL(t);;
 		timeline.deleteFromTL(t);
 		storage.write(taskList,archivedList);
@@ -860,25 +1109,12 @@ public class Manager {
 		
 	}
     
-    
-
-    
-    public void setTaskList(ArrayList<Task> tl){
-    	taskList = tl;
-    	
-    	undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
-    	//System.out.println(taskList.size());
-    	setptlAndTimeLine(taskList);
-    	
-    	storage.write(taskList,archivedList);
-    	
-    }
-    
-    public void setArchivedList(ArrayList<Task> al){
-    	archivedList = al;
-    	undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
-    	storage.write(taskList,archivedList);
-    	
+    public void update(int index, Task newTask){ 	
+    	taskList.remove(index);
+		taskList.add(index,newTask);
+		undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
+    			new ArrayList<Task>(archivedList));
+		storage.write(taskList,archivedList);
     }
     
     public void setptlAndTimeLine(ArrayList<Task> tl){
